--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
         <!--disabled pois impede que o usuário digite diretamente no display da calculadora-->
 
         <button onclick="limpar()">C</button>
-        <button onclick="mostraDisplay('%')" class="operador">%</button>
-        <button onclick="mostraDisplay('/')" class="operador">/</button>
-        <button onclick="mostraDisplay('*')" class="operador">×</button>
+        <button onclick="visor('%')" class="operador">%</button>
+        <button onclick="visor('/')" class="operador">/</button>
+        <button onclick="visor('*')" class="operador">×</button>
 
-        <button onclick="mostraDisplay('7')">7</button>
-        <button onclick="mostraDisplay('8')">8</button>
-        <button onclick="mostraDisplay('9')">9</button>
-        <button onclick="mostraDisplay('-')" class="operador">-</button>
+        <button onclick="visor('7')">7</button>
+        <button onclick="visor('8')">8</button>
+        <button onclick="visor('9')">9</button>
+        <button onclick="visor('-')" class="operador">-</button>
 
-        <button onclick="mostraDisplay('4')">4</button>
-        <button onclick="mostraDisplay('5')">5</button>
-        <button onclick="mostraDisplay('6')">6</button>
-        <button onclick="mostraDisplay('+')" class="operador">+</button>
+        <button onclick="visor('4')">4</button>
+        <button onclick="visor('5')">5</button>
+        <button onclick="visor('6')">6</button>
+        <button onclick="visor('+')" class="operador">+</button>
 
-        <button onclick="mostraDisplay('1')">1</button>
-        <button onclick="mostraDisplay('2')">2</button>
-        <button onclick="mostraDisplay('3')">3</button>
+        <button onclick="visor('1')">1</button>
+        <button onclick="visor('2')">2</button>
+        <button onclick="visor('3')">3</button>
         <button onclick="calcular()" class="operador">=</button>
 
-        <button onclick="mostraDisplay('0')" class="numero zero">0</button>
-        <button onclick="mostraDisplay('.')">.</button>
+        <button onclick="visor('0')" class="numero zero">0</button>
+        <button onclick="visor('.')">.</button>
         <button id="tiflux">
             <img src="img/tifluxlogo.png" alt="Tiflux logo" />
         </button>
